Token Point Type/objects/FieloPLT__Rule__c.object
<CustomObject>
    <fields>
        <fullName>Token_Conversion_Mode__c</fullName>
        <label>Token Conversion Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Conversion_Value__c</fullName>
        <label>Token Conversion Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Expiration_Date__c</fullName>
        <label>Token Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Token_Expiration_Mode__c</fullName>
        <label>Token Expiration Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_Field_Name__c</fullName>
        <label>Token Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Reflection__c</fullName>
        <label>Token Reflection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_months_until_expiration__c</fullName>
        <label>Token months until expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>